# canonical-agent-architecture

./: .env.example  README.md  push_tools.py  pyproject.toml
src/: __init__.py  agent.py  datasets.py  main.py  prompt.py  scorers.py  tools.py
src/evals/: base.py  eval_agent.py
